Fix projects card content wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300&family=IBM+Plex+Serif:wght@100&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300&family=IBM+Plex+Serif:wght@100&family=Libre+Baskerville&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai+Looped:wght@300&family=IBM+Plex+Serif:wght@100&family=Open+Sans:wght@300&display=swap');
+/* https://coolors.co/palette/f8f9fa-e9ecef-dee2e6-ced4da-adb5bd-6c757d-495057-343a40-212529 */
 
 * {
     box-sizing: border-box;
@@ -15,9 +14,7 @@ html {
 
 body {
     margin: 0;
-    font-family: 'IBM Plex Sans Thai Looped', serif;
-    /* font-family: 'IBM Plex Serif', serif; */
-    /* font-family: 'Libre Baskerville', serif; */
+    font-family: 'Open Sans', sans-serif;
     font-size: 17px;
     line-height: 1.6;
 }
@@ -101,11 +98,11 @@ body {
 
     width: auto;
     /* height: 800px; */
-    padding 0;
+    padding: 0;
     margin: 0;
     align-items: center;
     justify-content: space-around;
-    background-color: #efebeb;
+    background-color: #e9ecef;
 
     color: black;
 }
@@ -120,7 +117,6 @@ body {
     margin: 30px;
 
     display: flex;
-
 
     /* Debug */
     /* background-color: orange; */
@@ -147,7 +143,7 @@ body {
     justify-content: center;
     flex-wrap: wrap;
 
-    min-width: 800px;
+    /* min-width: 800px; */
     max-width: 100%;
 
     height: 500px;
@@ -164,7 +160,7 @@ body {
     width: 450px;
     height: auto;
 
-    padding-right: 50px;
+    padding: 0 40px;
 
     /* Debug */
     /* background-color: red; */
@@ -184,8 +180,10 @@ body {
 .about__text {
     /* flex: 600px; */
     width: 65%;
-    min-width: 500px;
+    min-width: 450px;
     max-width: 700px;
+
+    padding: 40px;
 
     display: flex;
     flex-direction: column;
@@ -195,7 +193,7 @@ body {
 
 
     /* Debug */
-    /* background-color: black; */
+    /* background-color: blue; */
 }
 
 .about__title {
@@ -224,9 +222,9 @@ body {
 /* Projects */
 
 .projects {
-    background-color: black;
+    background-color: #dee2e6;
     height: auto;
-    color: white;
+    color: black;
 
     display: flex;
     align-items: center;
@@ -240,26 +238,30 @@ body {
     text-decoration: underline;
     text-underline-offset: 15px;
 
-    background-color: cadetblue;
+    /* background-color: cadetblue; */
 }
+
 
 .projects__card {
     flex: 1;
-    flex-shrink: 0;
+    flex-shrink: 1;
     /* flex-basis: 500px; */
     margin: 20px 0px;
     padding: 10px;
 
-    min-height: 500px;
-    min-width: 800px;
+    /* min-height: 500px; */
+    /* min-width: 900px; */
     max-width: 100%;
 
     display: flex;
+    flex-direction: row-reverse;
+    
     flex-wrap: wrap;
+    justify-content: center;
     text-align: center;
-    width: 100%;
-    max-width: 50%;
-    background-color: grey;
+    width: 1000px;
+    /* max-width: 50%; */
+    /* background-color: grey; */
     /* border-radius: 20px; */
 }
 
@@ -273,9 +275,10 @@ body {
 
 /* TODO: get the image to have a max height */
 .projects__card-image {
-    flex: 1 1 40%;
-
-    background-color: brown;
+    /* flex: 1 1 40%; */
+    width: 300px;
+    height: 300px;
+    /* background-color: brown; */
 
     margin: 10px;
     max-height: 300px;
@@ -287,13 +290,9 @@ body {
     align-items: center;
 }
 
-.projects__card-image p {
-    background-color: orange;
-    /* background-image: url('../img/home-background.jpg'); */
-
-    margin: 30px;
-    width: 90%;
-    height: 90%;
+.projects__card-image img {
+    width: 100%;
+    height: 100%;
     /* max-height: 200px; */
     border-radius: 20px;
 }
@@ -303,36 +302,38 @@ body {
 
     display: flex;
     flex-direction: column;
-    background-color: blue;
+    justify-content: baseline;
+    /* background-color: blue; */
     margin: 10px;
     /* padding: 10px; */
 }
 
 .projects__card-title {
-    flex: 1 1 20%;
+    /* flex: 1 1 20%; */
 
-    background-color: teal;
+    /* background-color: teal; */
 
     margin: 0 10px;
     padding: 10px;
-    font-size: 25px;
+    font-size: 20px;
     line-height: 1.2;
 }
 
 .projects__card-desc {
-    flex: 1 1 75%;
+    /* flex: 1 1 75%; */
+    /* height: 200px; */
 
-    background-color: red;
+    /* background-color: red; */
 
-    font-size: 20px;
+    font-size: 18px;
     padding: 10px;
     margin: 0 10px;
 }
 
 .projects__card-link {
-    flex: 1 1 5%;
+    /* flex: 1 1 5%; */
 
-    background-color: blueviolet;
+    /* background-color: blueviolet; */
 
     display: flex;
     align-items: center;
